leadDuplicate code update

--- a/salesforce champ/force-app/main/default/classes/LeadTriggerHandler2.cls
+++ b/salesforce champ/force-app/main/default/classes/LeadTriggerHandler2.cls
@@ -1,23 +1,27 @@
-public with sharing class LeadTriggerHandler2 {
-   
-    public static void duplicateLead(List<Lead> newLeadList){
+//write a logic to avoid duplicate lead creation .
+public class LeadTriggerHandler2{
+
+
+    public static void  stopDuplicateLeadCreation(List<Lead> newLeadList){
         Set<String> emails = new Set<String>();
-        for(Lead l : newLeadList){
-            if(l.Email != null){
-                emails.add(l.email?.toLowerCase());
+        for(Lead ld : newLeadList){
+            if(ld.Email != null){
+                    emails.add(ld.Email?.toLowerCase());
             }
         }
 
+        Map<String,Lead> mapLead = new Map<String,Lead>();
         if(!emails.isEmpty()){
-            Map<String,Lead> leadMap = new Map<String,Lead>();
-          for(Lead l : [select id, Email from Lead where Email in : emails]){
-                leadMap.put(l.Email,l):
-          }
-           for(Lead l : newLeadList){
-                if(leadMap.isEmpty() && leadMap.containsKey(l.Email)){
-                    l.addError('Email already exist');
+            for(Lead ld : [select id,Email from Lead where Email in : emails]){
+                mapLead.put(ld.Email,ld);
+            }
+
+            for(Lead l : newLeadList){
+                if(!mapLead.isEmpty() && mapLead.containsKey(l.Email?.toLowerCase())){
+                    l.addError('hey guys!...Duplicate Leads cannot be created, there is an existing lead with same email');
                 }
-           }
+            }
         }
     }
+
 }
